Revision history for Perl extension PGXN::API

0.12.5
      - The directory name in which browsable distribution source files are
        unzipped is now always lowercase.

0.12.4  2011-04-25T16:59:36
      - The prefix in zip files is now assumed to be lowercase, as
        PGXN::Manager v0.12.4 enforces.

0.12.3  2011-04-25T16:35:28
      - When searching for "special files", the indexer now looks for files
        ending in ".in" if it doesn't find them without the ".in". Suggested
        by Daniele Varrazzo.
      - Always user lowercase disttribution names, versions, extension names,
        tags, and nicknames in in URI templates. They're still displayed with
        case preserved inside files and the index.

0.12.2  2011-04-22T18:51:42
      - Changed the media type of many more files served from `src` to
        text/plain. This is both for security reasons and so that files that
        are plain text open in the browser rather than prompt to download.

0.12.1  2011-04-20T23:41:26
      - Fixed rsync log parsing to properly detect when a file has been
        changed. Previously, the code was only noticing new files.

0.12.0  2011-04-20T05:35:52
      - Requests should now all be returned with an appropriate
        `Content-Length` header.
      - Added the `userlist` URI template and the code to generate the user
        lists to Indexer. It's set off at the end of a sync.
      - Now update user JSON files whenever they're updated on the mirror.
        Previously, a user JSON file was only updated when the user released a
        distribtion. But now user JSON files can be updated independently, and
        for users with no distributions at all. So we notice updated user JSON
        files and properly merge them into the doc root and update them in the
        full text index.
      - Renamed the `doc` URI template to `htmldoc`, in case we ever decide to
        offer other doc formats via the API.